--- a/Application/Admin/View/HomePicture/allHomePicture.html
+++ b/Application/Admin/View/HomePicture/allHomePicture.html
@@ -33,7 +33,7 @@
 			<div class="content-box">
 				<!-- Start Content Box -->
 				<div class="content-box-header">
-					<h3>Download</h3>
+					<h3>HomePicture</h3>
 					<ul class="content-box-tabs">
 						<li><a href="#tab1" class="default-tab">List</a></li>
 						<!-- href must be unique and match the id of target div -->
@@ -49,10 +49,9 @@
 							<thead>
 								<tr>
 									<th><input class="check-all" type="checkbox" /></th>
-									<th>DownloadTitle</th>
-									<th>DownloadReleaseDate</th>
-									<th>DoanloadPageView</th>
-									<th>DownloadURL</th>
+									<th>HomePictureName</th>
+									<th>HomePictureReleaseDate</th>
+									<th>HomePictureContentURL</th>
 									<th>Operation</th>
 								</tr>
 							</thead>
@@ -71,18 +70,16 @@
 								<foreach name="list" item="item">
 								<tr>
 									<td><input type="checkbox" name='checkboxscut'
-										id='{$item[downloadid]}' /></td>
-									<td>{$item[downloadtitle]}</td>
-									<td>{$item[downloadreleasedate]}</td>
-									<td>{$item[downloadpageview]}</td>
+										id='{$item[homepictureid]}' /></td>
+									<td>{$item[homepicturename]}</td>
+									<td>{$item[homepicturereleasedate]}</td>
+									<td>{$item[homepicturecontenturl]}</td>
 									<td><a
-										href="__PUBLIC__/Download/{$item[downloadreleasedate]|substr=0,10}/{$item[downloadurl]}">{$item[filename]}</a></td>
-									<td><a
-										href="{:U('Download/editDownload','downloadid=' . $item[downloadid])}"
+										href="{:U('HomePicture/editHomePicture','homepictureid=' . $item[homepictureid])}"
 										title="Edit" target="_blank"><img
-											src="__PUBLIC__/resources/images/icons/pencil.png" alt="Edi" /></a>
+											src="__PUBLIC__/resources/images/icons/pencil.png" alt="Edit" /></a>
 										<a
-										href="{:U('Download/allDownload','delete=' . $item[downloadid])}"
+										href="{:U('HomePicture/allHomePicture','delete=' . $item[homepictureid])}"
 										title="Delete"><img
 											src="__PUBLIC__/resources/images/icons/cross.png"
 											onclick="javascript:return confirm('Do Delete?');" alt="Delete" /></a></td>
@@ -93,19 +90,19 @@
 					</div>
 					<!-- End #tab1 -->
 					<div class="tab-content" id="tab2">
-						<form action="{:U('Download/addDownload')}"
+						<form action="{:U('HomePicture/addHomePicture')}"
 							enctype="multipart/form-data" method="post">
 							<fieldset>
 								<!-- Set class to "column-left" or "column-right" on fieldsets to divide the form into columns -->
 								<p>
-									<label>DownloadTitle</label> <input
+									<label>HomePicture Name</label> <input
 										class="text-input medium-input datepicker" type="text"
-										id="medium-input" name="downloadtitle" /> <br />
+										id="medium-input" name="homepicturename" /> <br />
 								</p>
 								<p>
-									<label>DownloadFile</label> <input
+									<label>HomePicture File</label> <input
 										class="text-input medium-input datepicker" type="file"
-										id="medium-input" name="downloadURL" /> <br />
+										id="medium-input" name="homepicturecontenturl" /> <br />
 								</p>
 
 								<p>
@@ -134,7 +131,7 @@
 					value.push(id[i].id);
 			}
 			//alert(value.toString());
-			window.location = "{:U('Download/allDownload','deleteMulti=-1')}"
+			window.location = "{:U('HomePicture/allHomePicture','deleteMulti=-1')}"
 					+ "," + value.toString();
 		}
 	}
