--- a/Application/Admin/View/BreakingNews/allBreakingNews.html
+++ b/Application/Admin/View/BreakingNews/allBreakingNews.html
@@ -33,7 +33,7 @@
 			<div class="content-box">
 				<!-- Start Content Box -->
 				<div class="content-box-header">
-					<h3>Download</h3>
+					<h3>BreakingNews</h3>
 					<ul class="content-box-tabs">
 						<li><a href="#tab1" class="default-tab">List</a></li>
 						<!-- href must be unique and match the id of target div -->
@@ -49,16 +49,17 @@
 							<thead>
 								<tr>
 									<th><input class="check-all" type="checkbox" /></th>
-									<th>DownloadTitle</th>
-									<th>DownloadReleaseDate</th>
-									<th>DoanloadPageView</th>
-									<th>DownloadURL</th>
+									<th>NewsTitle</th>
+									<th>NewsType</th>
+									<th>NewsReleaseDate</th>
+									<th>NewsMainContent</th>
+									<th>NewsMainPageView</th>
 									<th>Operation</th>
 								</tr>
 							</thead>
 							<tfoot>
 								<tr>
-									<td colspan="6">
+									<td colspan="10">
 										<div class="bulk-actions align-left">
 											<a class="button" onclick="deleteMulti()">Delete Select</a>
 										</div>
@@ -71,43 +72,51 @@
 								<foreach name="list" item="item">
 								<tr>
 									<td><input type="checkbox" name='checkboxscut'
-										id='{$item[downloadid]}' /></td>
-									<td>{$item[downloadtitle]}</td>
-									<td>{$item[downloadreleasedate]}</td>
-									<td>{$item[downloadpageview]}</td>
+										id='{$item[breakingnewsid]}' /></td>
+									<td>{$item[breakingnewsname]}</td>
+									<td>{$item[breakingnewstype]}</td>
+									<td>{$item[breakingnewsreleasedate]}</td>
+									<td>{$item[breakingnewsmaincontent]}</td>
+									<td>{$item[breakingnewspageview]}</td>
 									<td><a
-										href="__PUBLIC__/Download/{$item[downloadreleasedate]|substr=0,10}/{$item[downloadurl]}">{$item[filename]}</a></td>
-									<td><a
-										href="{:U('Download/editDownload','downloadid=' . $item[downloadid])}"
+										href="{:U('BreakingNews/editBreakingNews','breakingnewsid=' . $item[breakingnewsid])}"
 										title="Edit" target="_blank"><img
-											src="__PUBLIC__/resources/images/icons/pencil.png" alt="Edi" /></a>
+											src="__PUBLIC__/resources/images/icons/pencil.png" alt="编辑" /></a>
 										<a
-										href="{:U('Download/allDownload','delete=' . $item[downloadid])}"
+										href="{:U('BreakingNews/allBreakingNews','delete=' . $item[breakingnewsid])}"
 										title="Delete"><img
 											src="__PUBLIC__/resources/images/icons/cross.png"
-											onclick="javascript:return confirm('Do Delete?');" alt="Delete" /></a></td>
+											onclick="javascript:return confirm('Do Delete?');" alt="删除" /></a></td>
 								</tr>
 								</foreach>
+
 							</tbody>
 						</table>
 					</div>
 					<!-- End #tab1 -->
 					<div class="tab-content" id="tab2">
-						<form action="{:U('Download/addDownload')}"
-							enctype="multipart/form-data" method="post">
+						<form action="{:U('BreakingNews/addBreakingNews')}" method="post">
 							<fieldset>
 								<!-- Set class to "column-left" or "column-right" on fieldsets to divide the form into columns -->
 								<p>
-									<label>DownloadTitle</label> <input
+									<label>BreakingNewsTitle</label> <input
 										class="text-input medium-input datepicker" type="text"
-										id="medium-input" name="downloadtitle" /> <br />
+										id="medium-input" name="breakingNewsName" /> <br />
 								</p>
 								<p>
-									<label>DownloadFile</label> <input
-										class="text-input medium-input datepicker" type="file"
-										id="medium-input" name="downloadURL" /> <br />
+									<label>BreakingNewsType</label> <input
+										class="text-input medium-input datepicker" type="text"
+										id="medium-input" name="breakingNewsType" /> <br />
 								</p>
-
+								<p>
+									<label>BreakingNewsMainContent</label> <input
+										class="text-input medium-input datepicker" type="text"
+										id="medium-input" name="breakingNewsMainContent" /> <br />
+								</p>
+								<p>
+									<label>BreakingNewsContent</label>
+									<div style='height: 600px'>{$editorHtml}</div>
+								</p>
 								<p>
 									<input class="button" type="submit" value="Submit" />
 								</p>
@@ -134,7 +143,7 @@
 					value.push(id[i].id);
 			}
 			//alert(value.toString());
-			window.location = "{:U('Download/allDownload','deleteMulti=-1')}"
+			window.location = "{:U('BreakingNews/allBreakingNews','deleteMulti=-1')}"
 					+ "," + value.toString();
 		}
 	}
