--- a/Application/Admin/View/Login/login.html
+++ b/Application/Admin/View/Login/login.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>{$APPLICATION_NAME}系统后台</title>
+<title>{$APPLICATION_NAME} System</title>
 <!--                       CSS                       -->
 <!-- Reset Stylesheet -->
 <load href="__PUBLIC__/resources/css/reset.css" />
