--- a/Application/Admin/View/Menu/slidebar.html
+++ b/Application/Admin/View/Menu/slidebar.html
@@ -19,7 +19,7 @@
 		<li><a href="{:U('BreakingNews/allBreakingNews')}"<if
 					condition="$CURRENT_MENU eq 'BREAKINGNEWS'">
 				class="nav-top-item no-submenu current" <else />
-				class="nav-top-item no-submenu" </if>>BreakingNews</a></li>
+				class="nav-top-item no-submenu" </if>>EditContent</a></li>
 		<li><a href="{:U('SignUp/allSignUp')}"<if
 					condition="$CURRENT_MENU eq 'SIGNUP'"> class="nav-top-item
 				no-submenu current" <else /> class="nav-top-item no-submenu" </if>>SignUp</a></li>
