--- a/Application/Admin/View/SystemSetting/systemSetting.html
+++ b/Application/Admin/View/SystemSetting/systemSetting.html
@@ -99,14 +99,13 @@
 								<p>
 									<label>SystemSettingName</label> <select
 										name="systemsettingname" class="small-input">
-										<option value="遊學優勢標題" selected="selected">遊學優勢標題</option>
-										<option value="遊學優勢內容">遊學優勢內容</option>
-										<option value="酒店鏈接">酒店鏈接</option>
-										<option value="申請步驟">申請步驟</option>
-										<option value="項目費用明細">項目費用明細</option>
-										<option value="常見問題">常見問題</option>
-										<option value="聯繫方式電話">聯繫方式電話</option>
-										<option value="聯繫方式郵箱">聯繫方式郵箱</option>
+										<!-- 
+										<option value="1" selected="selected">遊學優勢標題</option>
+										<option value="2">遊學優勢內容</option>
+										 -->
+										<option value="3" selected="selected">酒店鏈接</option>
+										<option value="4">聯繫方式電話</option>
+										<option value="5">聯繫方式郵箱</option>
 									</select> <br />
 								</p>
 								<p>
