--- a/Application/Admin/View/BreakingNews/allBreakingNews.html
+++ b/Application/Admin/View/BreakingNews/allBreakingNews.html
@@ -33,7 +33,7 @@
 			<div class="content-box">
 				<!-- Start Content Box -->
 				<div class="content-box-header">
-					<h3>BreakingNews</h3>
+					<h3>EditContent</h3>
 					<ul class="content-box-tabs">
 						<li><a href="#tab1" class="default-tab">List</a></li>
 						<!-- href must be unique and match the id of target div -->
@@ -45,23 +45,85 @@
 				<div class="content-box-content">
 					<div class="tab-content default-tab" id="tab1">
 
-						<table>
+						<table style="table-layout: fixed;">
 							<thead>
 								<tr>
-									<th><input class="check-all" type="checkbox" /></th>
-									<th>NewsTitle</th>
-									<th>NewsType</th>
-									<th>NewsReleaseDate</th>
-									<th>NewsMainContent</th>
-									<th>NewsMainPageView</th>
-									<th>Operation</th>
+									<th width="10%"><input class="check-all" type="checkbox" /></th>
+									<th width="20%">ContentTitle</th>
+									<th width="20%">ContentType</th>
+									<th width="20%">ContentReleaseDate</th>
+									<th width="20%">ContentMainContent</th>
+									<th width="20%">ContentMainPageView</th>
+									<th width="20%">Operation</th>
 								</tr>
 							</thead>
 							<tfoot>
 								<tr>
-									<td colspan="10">
+									<td colspan="7">
 										<div class="bulk-actions align-left">
 											<a class="button" onclick="deleteMulti()">Delete Select</a>
+										</div>
+										<div class="bulk-actions align-left"></div>
+										<div class="bulk-actions align-left">
+											<label>&nbsp;&nbsp;&nbsp;Type</label> <select id="selectType"
+												class="small-input"
+												onChange="selectedTypeChanged(this.value)">
+												<if condition="$selectedtype eq all">
+												<option value="all" selected="selected">ALL</option>
+												<else />
+												<option value="all">ALL</option>
+												</if>
+												<if condition="$selectedtype eq 1">
+												<option value="1" selected="selected">新聞</option>
+												<else />
+												<option value="1">新聞</option>
+												</if>
+												<if condition="$selectedtype eq 2">
+												<option value="2" selected="selected">留學考試區</option>
+												<else />
+												<option value="2">留學考試區</option>
+												</if>
+												<if condition="$selectedtype eq 3">
+												<option value="3" selected="selected">世界排名一覽</option>
+												<else />
+												<option value="3">世界排名一覽</option>
+												</if>
+												<if condition="$selectedtype eq 4">
+												<option value="4" selected="selected">留學區域資料</option>
+												<else />
+												<option value="4">留學區域資料</option>
+												</if>
+												<if condition="$selectedtype eq 5">
+												<option value="5" selected="selected">申請步驟</option>
+												<else />
+												<option value="5">申請步驟</option>
+												</if>
+												<if condition="$selectedtype eq 6">
+												<option value="6" selected="selected">項目費用明細</option>
+												<else />
+												<option value="6">項目費用明細</option>
+												</if>
+												<if condition="$selectedtype eq 7">
+												<option value="7" selected="selected">常見問題</option>
+												<else />
+												<option value="7">常見問題</option>
+												</if>
+												<if condition="$selectedtype eq 8">
+												<option value="8" selected="selected">遊學優勢</option>
+												<else />
+												<option value="8">遊學優勢</option>
+												</if>
+												<if condition="$selectedtype eq 9">
+												<option value="9" selected="selected">留學案例</option>
+												<else />
+												<option value="9">留學案例</option>
+												</if>
+												<if condition="$selectedtype eq 10">
+												<option value="10" selected="selected">學生之聲</option>
+												<else />
+												<option value="10">學生之聲</option>
+												</if>
+											</select>
 										</div>
 										<div class="pagination">{$page}</div> <!-- End .pagination -->
 										<div class="clear"></div>
@@ -73,11 +135,16 @@
 								<tr>
 									<td><input type="checkbox" name='checkboxscut'
 										id='{$item[breakingnewsid]}' /></td>
-									<td>{$item[breakingnewsname]}</td>
-									<td>{$item[breakingnewstype]}</td>
-									<td>{$item[breakingnewsreleasedate]}</td>
-									<td>{$item[breakingnewsmaincontent]}</td>
-									<td>{$item[breakingnewspageview]}</td>
+									<td
+										style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">{$item[breakingnewsname]}</td>
+									<td
+										style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">{$item[breakingnewstype]}</td>
+									<td
+										style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">{$item[breakingnewsreleasedate]}</td>
+									<td
+										style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">{$item[breakingnewsmaincontent]}</td>
+									<td
+										style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">{$item[breakingnewspageview]}</td>
 									<td><a
 										href="{:U('BreakingNews/editBreakingNews','breakingnewsid=' . $item[breakingnewsid])}"
 										title="Edit" target="_blank"><img
@@ -95,26 +162,41 @@
 					</div>
 					<!-- End #tab1 -->
 					<div class="tab-content" id="tab2">
-						<form action="{:U('BreakingNews/addBreakingNews')}" method="post">
+						<form action="{:U('BreakingNews/addBreakingNews')}" enctype="multipart/form-data" method="post">
 							<fieldset>
 								<!-- Set class to "column-left" or "column-right" on fieldsets to divide the form into columns -->
 								<p>
-									<label>BreakingNewsTitle</label> <input
+									<label>ContentTitle</label> <input
 										class="text-input medium-input datepicker" type="text"
 										id="medium-input" name="breakingNewsName" /> <br />
 								</p>
 								<p>
-									<label>BreakingNewsType</label> <input
-										class="text-input medium-input datepicker" type="text"
-										id="medium-input" name="breakingNewsType" /> <br />
+									<label>ContentType</label><select name="breakingNewsType"
+										class="small-input">
+										<option value="1" selected="selected">新聞</option>
+										<option value="2">留學考試區</option>
+										<option value="3">世界排名一覽</option>
+										<option value="4">留學區域資料</option>
+										<option value="5">申請步驟</option>
+										<option value="6">項目費用明細</option>
+										<option value="7">常見問題</option>
+										<option value="8">遊學優勢</option>
+										<option value="9">留學案例</option>
+										<option value="10">學生之聲</option>
+									</select> <br />
 								</p>
 								<p>
-									<label>BreakingNewsMainContent</label> <input
+									<label>ContentAbstract</label> <input
 										class="text-input medium-input datepicker" type="text"
 										id="medium-input" name="breakingNewsMainContent" /> <br />
 								</p>
 								<p>
-									<label>BreakingNewsContent</label>
+									<label>Picture (學生之聲)</label> <input
+										class="text-input medium-input datepicker" type="file"
+										id="medium-input" name="breakingNewsURL" /> <br />
+								</p>
+								<p>
+									<label>ContentContent</label>
 									<div style='height: 600px'>{$editorHtml}</div>
 								</p>
 								<p>
@@ -146,5 +228,10 @@
 			window.location = "{:U('BreakingNews/allBreakingNews','deleteMulti=-1')}"
 					+ "," + value.toString();
 		}
+	}
+
+	function selectedTypeChanged(value) {
+		window.location = "{:U('BreakingNews/allBreakingNews')}"
+				+ "?selectedType=" + value;
 	}
 </script>
