--- a/Application/Admin/View/User/userSetting.html
+++ b/Application/Admin/View/User/userSetting.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>{$APPLICATION_NAME}系统后台</title>
+<title>{$APPLICATION_NAME} System</title>
 <!--                       CSS                       -->
 <!-- Reset Stylesheet -->
 <load href="__PUBLIC__/resources/css/reset.css" />
@@ -35,7 +35,7 @@
 			<div class="content-box">
 				<!-- Start Content Box -->
 				<div class="content-box-header">
-					<h3>个人设置</h3>
+					<h3>個人設置</h3>
 					<ul class="content-box-tabs">
 						<li><a href="#tab1" class="default-tab">个人设置</a></li>
 						<!-- href must be unique and match the id of target div -->
@@ -58,23 +58,23 @@
 										value="{$tempUser[0]['useraccount']}" /> <br />
 								</p>
 								<p>
-									<label>修改密码：原密码</label> <input
+									<label>修改密碼：原密碼</label> <input
 										class="text-input medium-input datepicker" type="password"
 										id="medium-input" name="exUserPassword" /> <br />
 								</p>
 								<p>
-									<label>修改密码：新密码</label> <input
+									<label>修改密碼：新密碼</label> <input
 										class="text-input medium-input datepicker" type="password"
 										id="medium-input" name="newUserPassword" /> <br />
 								</p>
 								<p>
-									<label>邮箱</label> <input
+									<label>郵箱</label> <input
 										class="text-input medium-input datepicker" type="text"
 										value="{$tempUser[0]['usermail']}" id="medium-input"
 										name="userMail" /> <br />
 								</p>
 								<p>
-									<label>创建时间</label> <input
+									<label>創建時間</label> <input
 										class="text-input medium-input datepicker" type="text"
 										value="{$tempUser[0]['usercreatetime']}" id="medium-input"
 										style="background-image:none;background-color:#ECE3E3"
