--- a/Application/Home/View/Layout/header.html
+++ b/Application/Home/View/Layout/header.html
@@ -16,13 +16,13 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse" >
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">首页</a></li>
+                    <li><a href="{:U('Index/index')}">首页</a></li>
                     <li><a href="{:U('Project/pfp')}">PFP香港项目</a></li>
                     <li><a href="pst.html">PST游学项目</a></li>
                     <li><a href="schedule.html">日程安排</a></li>
                     <li><a href="studyabroad.html">留学服务</a></li>
                     <li><a href="guide.html">申请指南</a></li>
-                    <li><a class="navbar-pal-btn" href="application.html">在线申请</a></li>
+                    <li><a class="navbar-pal-btn" href="{:U('Application/application')}">在线申请</a></li>
                 </ul>
             </div>
         </div>
