--- a/Application/Home/View/Project/pfp.html
+++ b/Application/Home/View/Project/pfp.html
@@ -9,45 +9,13 @@
     <link rel="shortcut icon" href="/favicon.db7d7834.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.33155541.png">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-
-    <link rel="stylesheet" href="styles/project.b14f3ff8.css">
-    <script src="scripts/vendor/modernizr.6857963c.js"></script>
+    <link rel="stylesheet" href="__PUBLIC__/res/styles/project.b14f3ff8.css">
+    <script src="__PUBLIC__/res/scripts/vendor/modernizr.6857963c.js"></script>
 
   </head>
   <body>
-    <!--[if lt IE 10]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
-  <!--header nav-->
-    <div class="header">
-        <div class="navbar  navbar-default navbar-fixed-top">
-            <div class="container">
-                  <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                      <span class="sr-only">Toggle navigation</span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                    </button>
-                     <a  href="#"><img  class="logo" src="images/logo.png" alt="pal logo"></a>
-                 </div>
-                 <div id="navbar" class="navbar-collapse collapse" >
-                      <ul class="nav navbar-nav navbar-right">
-                         <li><a href="index.html">首页</a></li>
-                         <li><a href="pfp.html">PFP香港项目</a></li>
-                         <li><a href="pst.html">PST游学项目</a></li>
-                         <li><a href="schedule.html">日程安排</a></li>
-                          <li><a href="studyabroad.html">留学服务</a></li>
-                         <li><a href="guide.html">申请指南</a></li>
-                         <li><a class="navbar-pal-btn" href="application.html">在线申请</a></li>
-                      </ul>
-                 </div>
-            </div>
-        </div>
-    </div>
-
+  <!--引入头部-->
+  <include file="Layout/header"/>
     <!--内容区-->
     <div class="content">
       <div class="container">
@@ -274,61 +242,9 @@
         </div>
       </div>
     </div>
-
-
-     <!--底部-->
-    <div class="footer">
-      <div class="container">
-        <h3>联系我们</h3>
-        <!--地址-->
-        <address>
-          <strong><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>Address</strong><br>
-          UNIT 1104A，11/F，KAI TAK COMM. BLDG. 317-319 DES VOEUX ROAD, CENTRAL, HONG KONG<br>
-          香港上环德辅路中317-319号启德商业大厦11楼1104A室<br>
-        </address>
-        <!--微信公共号-->
-        <address>
-          <strong><span class="glyphicon glyphicon-qrcode" aria-hidden="true"></span>WeChat ID</strong><br>
-          <h4>Wechat Official Account</h4>
-          <img src="images/pal.png" alt="pal微信二维码"><br>
-          <h4>Mentor Isaac</h4>
-          <img src="images/Issac.png" alt="Issac微信二维码"><br>
-          <h4>CS Phyllis</h4>
-          <img src="images/Phyllis.png" alt="Phyllis微信二维码">
-        </address>
-        <!--电话-->
-        <address>
-          <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
-          Phone:<br>
-          HongKong TEL：+（852）37570899 <br>
-          China TEL：+（86）15913179974 <br>
-        </address>
-
-        <!--email-->
-        <address>
-          <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-          <strong>Email</strong><br>
-          Email: admin@palhk.co
-        </address>
-
-      </div>
-    </div>
-
-
-
-    <script src="scripts/vendor.8ea373f3.js"></script>
-
-    <script src="scripts/plugins.19a1d77b.js"></script>
-
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='https://www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
+    <!--引入底部文件-->
+    <include file="Layout/footer"/>
+    <script src="__PUBLIC__/res/scripts/vendor.8ea373f3.js"></script>
+    <script src="__PUBLIC__/res/scripts/plugins.19a1d77b.js"></script>
   </body>
 </html>
