--- a/Application/Admin/View/SignUp/editSignUp.html
+++ b/Application/Admin/View/SignUp/editSignUp.html
@@ -43,6 +43,18 @@
 					<fieldset>
 						<!-- Set class to "column-left" or "column-right" on fieldsets to divide the form into columns -->
 						<p>
+							<label>SignUpProject</label> <input
+								class="text-input medium-input datepicker" type="text"
+								id="medium-input" name="signupproject"
+								value="{$signUp['signupproject']}" /> <br />
+						</p>
+						<p>
+							<label>SignUpArea</label> <input
+								class="text-input medium-input datepicker" type="text"
+								id="medium-input" name="signuparea"
+								value="{$signUp['signuparea']}" /> <br />
+						</p>
+						<p>
 							<label>SignUpName</label> <input
 								class="text-input medium-input datepicker" type="text"
 								id="medium-input" name="signupname"
