修改发布人

--- a/Application/Admin/View/BreakingNews/editBreakingNews.html
+++ b/Application/Admin/View/BreakingNews/editBreakingNews.html
@@ -109,6 +109,12 @@
 							</select> <br />
 						</p>
 						<p>
+							<label>Content Release</label> <input
+								class="text-input medium-input datepicker" type="text"
+								id="medium-input" name="breakingNewsRelease"
+								value="{$breakingNews['breakingnewsrelease']}" /> <br />
+						</p>
+						<p>
 							<label>Content MainContent</label> <input
 								class="text-input medium-input datepicker" type="text"
 								id="medium-input" name="breakingNewsMainContent"
